--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,15 +1,15 @@
 // sidebar
-$menuText:#bfcbd9;
-$menuActiveText:#409EFF;
-$subMenuActiveText:#f4f4f5; //https://github.com/ElemeFE/element/issues/12951
+$menuText:#000;
+$menuActiveText: #5f84ff;
+$subMenuActiveText: #5f84ff; //https://github.com/ElemeFE/element/issues/12951
 
-$menuBg:#fff;
-$menuHover:#263445;
+$menuBg: #fff;
+$menuHover: unset;
 
 $subMenuBg:#fff;
-$subMenuHover:#001528;
+$subMenuHover: unset;
 
-$sideBarWidth: 210px;
+$sideBarWidth: 167px;
 
 // the :export directive is the magic sauce for webpack
 // https://www.bluematador.com/blog/how-to-share-variables-between-js-and-sass
