--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -5,6 +5,7 @@
 @import './sidebar.scss';
 
 body {
+  width: 100%;
   height: 100%;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
@@ -13,15 +14,17 @@ body {
 }
 
 label {
-  font-weight: 700;
+  font-weight: 400;
 }
 
 html {
+  width: 100%;
   height: 100%;
   box-sizing: border-box;
 }
 
 #app {
+  width: 100%;
   height: 100%;
 }
 
@@ -61,5 +64,12 @@ div:focus {
 
 // main-container global css
 .app-container {
-  padding: 20px;
+  // padding: 20px;
+  width: 100%;
+  height: 100%;
+  // background-color: #f8fafd;
+  // padding-top: 60px;
+  // padding-left: 20px;
+  // padding-right: 20px;
+  // margin-left: 167px;
 }
